force-app/main/default/objects/TempSalesAreas__c/TempSalesAreas__c.object-meta.xml
<CustomObject>
    <description>Tabla temporal para la carga de áreas de ventas de Francia</description>
    <label>TempSalesAreas</label>
    <nameField>
        <label>TempSalesAreas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TempSalesAreas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>