force-app/main/default/objects/TempSalesAreas__c/fields/Bzirk__c.field-meta.xml
<CustomField>
    <fullName>Bzirk__c</fullName>
    <label>Bzirk</label>
    <length>6</length>
    <type>Text</type>
</CustomField>