force-app/main/default/objects/TempSalesAreas__c/fields/BzirkName__c.field-meta.xml
<CustomField>
    <fullName>BzirkName__c</fullName>
    <label>BzirkName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>