force-app/main/default/objects/TempSalesAreas__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <label>DistributionChannel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>