force-app/main/default/objects/TempSalesAreas__c/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <label>SAPId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>